# med-autoscience

./: .agent-contract-baseline.json  .gitignore  AGENTS.md  CLAUDE.md  MANIFEST.in  Makefile  README.md  README.zh-CN.md  TASTE.md  pyproject.toml  setup.py
.github/: release-notes.md
.sentrux/: baseline.json
adapters/: legacy_runtime_boundary.md
agent/: standard-domain-agent-anchor.json
bootstrap/: README.md
config/: display_packs.toml
contracts/: README.md  academicforge_claude_science_learning_adoption.json  action_catalog.json  agent_lab_handoff.json  agent_lab_self_evolution_policy.json  agent_tool_arsenal.json  artifact_iteration_efficiency_policy.json  artifact_locator_contract.json  authority_kernel_inventory.json  capability_map.json  data_asset_operating_contract.json  display-pack-contract.v2.json  display_pack_opl_adapter.json  domain_descriptor.json  domain_handler_registry.json  domain_owner_answer_projection_profile.json  domain_projection_profile.json  domain_route_profile.json  evidence-gap-consumption-abi.json  evidence-gap-decision-examples.json  evidence-gap-decision-policy.json  evo_scientist_progress_accelerator.json  figure_polish_lifecycle_contract.json  foundry-agent-os-domain-kernel-manifest.json  foundry_agent_series.json  foundry_owner_gate_policy.json  functional_privatization_audit.json  generated_surface_handoff.json  golden_path_profile.json  hosted_ordinary_path_consumption.json  kdense_byok_external_intake.json  live_stage_run_progress_evidence.json  manuscript_first_draft_quality_policy.json  mas-paper-study-stage-pack.json  mas-stage-closure-terminalizer.json  mas_validator_release_set_receipt.json  medical_figure_spec_contract.json  memory_descriptor.json  nature_skills_learning_adoption.json  next_action_envelope_contract.json  (+41 more)
controllers/: README.md
docs/: README.md  README.zh-CN.md  agent_runtime_interface.md  architecture.md  codex_plugin.md  decisions.md  delivery_plane_contract_map.md  disease_workspace_quickstart.md  docs_portfolio_consolidation.md  documentation-governance.md  domain-harness-os-positioning.md  domain_gateway_harness_os.md  external_runtime_dependency_gate.md  integration_harness_activation_package.md  invariants.md  mainline_integration_and_cleanup.md  manual_runtime_stabilization_checklist.md  medical_display_anchor_paper_audit.md  medical_display_arsenal.md  medical_display_arsenal_history.md  medical_display_audit_guide.md  medical_display_family_baseline_program.md  medical_display_family_roadmap.md  medical_display_platform_mainline.md  medical_display_template_backlog.md  medical_display_template_catalog.md  medical_display_template_pack_architecture.md  medical_display_template_pack_implementation_plan.md  medical_display_visual_audit_protocol.md  merge_and_cutover_gates.md  omx_worktree_startup_and_closeout.md  open_harness_os_architecture.md  open_harness_os_freeze_plan.md  outer_loop_wakeup_and_decision_loop.md  project.md  project_repair_priority_map.md  publication_eval_authority_guardrails.md  real_study_relaunch_verification.md  repo_split_between_research_foundry_and_med_autoscience.md  repository_ci_preflight.md  (+17 more)
guides/: agent_entry_modes.md  agent_runtime_interface.md  codex_plugin.md  codex_plugin_release.md  disease_workspace_quickstart.md  medical_display_audit_guide.md  medical_display_template_catalog.md  merge_and_cutover_gates.md  runtime_boundary.md  sidecar_figure_routes.md  study_runtime_orchestration.md  upstream_intake.md  workspace_architecture.md
plugins/: mas
policies/: data_asset_management.md  platform_operating_model.md  publication_gate_policy.md  research_route_bias_policy.md  study_archetypes.md  workspace_autoscience_rules.md
profiles/: nfpitnet.local.toml  workspace.profile.template.toml
scripts/: build-display-pack-gallery.py  build-mas-whitepaper.ts  install-claude-skill.sh  (+19 more)
(+6353 files in other folders)
