[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "med-autoscience"
version = "0.1.0"
description = "Medical research domain agent with OPL stage-led framework integration surfaces."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Gao Feng" }
]
dependencies = [
  "PyYAML>=6.0",
  "matplotlib>=3.9",
  "pypdf>=5.0",
  "xlsxwriter>=3.2",
]

[project.optional-dependencies]
analysis = [
  "matplotlib>=3.9",
  "pandas>=2.2",
  "numpy>=1.26",
  "scipy>=1.13",
  "scikit-learn>=1.5",
  "statsmodels>=0.14",
  "lifelines>=0.30",
  "seaborn>=0.13",
  "openpyxl>=3.1",
  "python-docx>=1.1",
  "pillow>=10.0",
  "pypdf>=5.0",
]

[dependency-groups]
dev = [
  "build>=1.2",
  "packaging>=24.0",
  "pytest>=8.0",
  "pytest-xdist>=3.6",
  "python-docx>=1.1",
  "setuptools>=69",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["med_autoscience*"]

[tool.setuptools.package-data]
"med_autoscience.styles" = ["*.csl"]
"med_autoscience.resources" = ["stage_route_contract.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
cache_dir = "/tmp/mas-pytest-cache"
addopts = ["--import-mode=importlib"]
markers = [
  "meta: repo-tracked docs, workflow, packaging, and command-surface checks",
  "display_heavy: display materialization and golden-regression tests that dominate wall-clock time",
  "submission_heavy: submission package materialization tests that dominate fast-lane wall-clock time",
  "family: OPL Framework boundary tests that depend on cross-repo Framework topology",
  "contract: stable command, schema, and owner-surface contracts that protect public behavior",
  "integration: cross-entry or cross-module integration tests that are broader than unit contracts",
  "materialization_heavy: artifact/package materialization tests that should stay out of default regression",
  "soak_or_golden: long-running soak, golden-regression, or fixture-oracle tests",
]
