[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "med-autoscience"
version = "0.2.7"
description = "Medical research domain agent with OPL stage-led framework integration surfaces."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Gao Feng" }
]
dependencies = []

[dependency-groups]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "setuptools>=69",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["med_autoscience*"]

[tool.setuptools.package-data]
"med_autoscience.styles" = ["*.csl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
cache_dir = "/tmp/mas-pytest-cache"
addopts = ["--import-mode=importlib"]
markers = [
  "meta: repo-tracked docs, workflow, packaging, and command-surface checks",
  "family: OPL Framework boundary tests that depend on cross-repo Framework topology",
  "contract: stable command, schema, and owner-surface contracts that protect public behavior",
  "integration: cross-entry or cross-module integration tests that are broader than unit contracts",
]
